--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
                                         <td id="aboutme-ans">Vigram Sivakumar</td>
                                     </tr>
                                     <tr>
-                                        <td id="aboutme-qus">Nationallity</td>
+                                        <td id="aboutme-qus">Nationality</td>
                                         <td id="aboutme-ans">Indian</td>
                                     </tr>
                                     <tr>
@@ -108,9 +108,9 @@
                         <div id="aboutme" class="m-0 p-0 ml-3 mt-2">
                             <ul class="m-0 p-0">
                                 <li>Hello, about me</li>
-                                <li>Passinate & curiosity-driven programming enthusiast. Gained wide range of skills
-                                    like HTML5, css, Python, etc. Seeking to further improve skills
-                                    as a full stack developer</li>
+                                <li>Passionate& curiosity-driven programming enthusiast. Gained a wide range of skills
+                                    like HTML5, CSS, Python, etc. Seeking to further improve skills
+                                    as a full-stack developer</li>
                             </ul>
                         </div>
 
@@ -224,10 +224,10 @@
                                         workspace for
                                         bookmarks, notes,
                                         tasks &
-                                        database. It's a tool to organize the thoughts & informations.</p>
+                                        database. It's a tool to organize thoughts & information.</p>
                                     <p id="information">
                                     </p>
-                                    <p id="title">Tools: <span>Python, HTML5, css, Flask, BeautifulSoup, SqlAlchemy,
+                                    <p id="title">Tools: <span>Python, HTML5, CSS, Flask, BeautifulSoup, SqlAlchemy,
                                             API, Bootstrap, Git, etc.</span></p>
                                 </div>
                             </div>
