--- a/resume.html
+++ b/resume.html
@@ -29,16 +29,20 @@
             <div id="paper" class="col-4">
 
                 <div id="button-back" class="m-0 p-0 d-flex justify-content-center align-items-center">
-                    <a type="button" role="button" href="javascript:history.back()"><i
-                            class="bi bi-caret-left-fill"></i></a>
+                    <div id="icon-back">
+                        <a type="button" role="button" onclick="history.go(-1)"><i
+                                class=" bi bi-caret-left-fill"></i></a>
+                    </div>
+                    <a id="hidden-text" type="button" role="button" onclick="history.go(-1)">Go back</a>
                 </div>
 
-                <div id="button-download"
+                <div id=" button-download"
                     class="m-0 p-0 px-1 btn btn-sm btn-warning d-flex justify-content-center align-items-center">
-                    <a type="button" role="button" ref="/static/images/vigram_resume.pdf" target="_blank" download"><i
+                    <a type="button" role="button" href="/static/images/vigram_resume.pdf" target="_blank" download"><i
                             class="bi bi-box-arrow-down"></i></a>
-                    <a type="button" ref="/static/images/vigram_resume.pdf" target="_blank" download>Download</a>
+                    <a type="button" href="/static/images/vigram_resume.pdf" target="_blank" download>Download</a>
                 </div>
+
 
                 <!-- Header part of the resume -->
                 <div id="header" class="m-0 p-0 pr-5 d-flex">
@@ -97,9 +101,10 @@
                                 <div id="social-icons">
                                     <a id="icons" href="https://github.com/theFoxSteering" target="_blank"><i
                                             class="git bi bi-github"></i></a>
+                                </div>
+                                <div id="social-icons">
                                     <a id="icons" href="https://www.linkedin.com/in/vigramsivakumar/" target="_blank"><i
                                             class="linkedin bi bi-linkedin"></i></a>
-
                                 </div>
                             </div>
 
