--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,11 @@
 
                 <div id="button-download"
                     class="m-0 p-0 px-1 btn btn-sm btn-warning d-flex justify-content-center align-items-center">
-                    <a type="button" role="button" href="/static/images/vigram_resume.pdf" target="_blank" download"><i
-                            class="bi bi-box-arrow-down"></i></a>
-                    <a type="button" href="/static/images/vigram_resume.pdf" target="_blank" download>Download</a>
+                    <div id="icon-download">
+                        <a type="button" role="button" href="/static/images/vigram_resume.pdf" target="_blank"
+                            download"><i class="bi bi-box-arrow-down"></i></a>
+                        <a type="button" href="/static/images/vigram_resume.pdf" target="_blank" download>Download</a>
+                    </div>
                 </div>
 
 
