--- a/resume.html
+++ b/resume.html
@@ -36,13 +36,14 @@
                     <a id="hidden-text" type="button" role="button" onclick="history.go(-1)">Go back</a>
                 </div>
 
-                <div id="button-download"
-                    class="m-0 p-0 px-1 btn btn-sm btn-warning d-flex justify-content-center align-items-center">
+                <div id="button-download" class="m-0 p-0 px-1 d-flex justify-content-center align-items-center">
                     <div id="icon-download">
                         <a type="button" role="button" href="/static/images/vigram_resume.pdf" target="_blank"
                             download"><i class="bi bi-box-arrow-down"></i></a>
-                        <a type="button" href="/static/images/vigram_resume.pdf" target="_blank" download>Download</a>
                     </div>
+                    <a id="hidden-text" type="button" href="/static/images/vigram_resume.pdf" target="_blank"
+                        download>Download</a>
+
                 </div>
 
 
